# Lms

./: .gitignore
backends/nest/: data.txt
backends/nest/backend/: .env  .env.example  .gitignore  package.json  pnpm-lock.yaml
backends/nest/backend/src/: app.module.ts  main.ts  mikro-orm.config.ts
backends/nest/backend/src/libs/: mikro-orm.store.ts  password.ts
backends/nest/backend/src/mail/: mail.service.ts
backends/nest/backend/src/templates/: verifycode.template.ts
backends/nest/backend/src/user/: user.module.ts
backends/rust/backend/: .gitignore  Cargo.toml
backends/rust/backend/migration/: Cargo.toml
backends/rust/backend/migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20251018_160007_create_accounts.rs  m20251018_160024_create_sessions.rs  m20251019_142700_verification.rs  main.rs
backends/rust/backend/src/: main.rs
backends/rust/backend/src/email/: client.rs  mod.rs  verify_code.rs
backends/rust/backend/src/entities/: mod.rs  provider.rs  sea_orm_active_enums.rs  session.rs  user.rs  verification.rs
backends/rust/backend/src/user/: auth.rs  mod.rs  types.rs
backends/rust/backend/src/utils/: env.rs
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/inputs/: code-input.tsx
frontend/src/components/theme/: theme-button.tsx
frontend/src/lib/api/: api.ts
frontend/src/lib/theme/: ThemeButton.tsx  ThemeProvider.tsx  theme.ts
(+17 files in other folders)
