[workspace]
members = [".","migration"]

[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.11.0", features = ["secure-cookies"] }
colored = "3.0.0"
dotenvy = "0.15.7"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = "1.48.0"
env_logger = "0.11.8"
env = "1.0.1"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
nanoid = "0.4.0"
bcrypt = "0.17.1"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls", "pool", "tracing"] }
anyhow = "1.0.100"
rand = "0.9.2"
resend-rs = "0.18.0"
chrono = "0.4.42"
futures = "0.3.31"

